--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mitsuhiro's Portfolio</title>
+    <title>Music Recommender</title>
+    <link rel="icon" type="image/png" href="assets/profile-pic.png" />
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
