--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Recommender</title>
-    <link rel="icon" type="image/png" href="assets/profile-pic.png" />
+    <link rel="icon" type="image/png" href="static/assets/profile-pic.png" />
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
@@ -21,26 +21,25 @@
                 <label for="mood">気分:</label>
                 <select id="mood" name="mood">
                     <option value="" selected disabled>選択してください</option>
-                    <option value="😀">😀</option>
-                    <option value="😢">😢</option>
-                    <option value="😎">😎</option>
-                    <option value="😡">😡</option>
-                    <option value="😍">😍</option>
+                    <option value="😀">😀 楽しい</option>
+                    <option value="😢">😢 悲しい</option>
+                    <option value="😎">😎 クール</option>
+                    <option value="😡">😡 激おこ</option>
+                    <option value="😍">😍 ラブ</option>
                 </select>
 
                 <label for="genre">ジャンル:</label>
                 <select id="genre" name="genre">
                     <option value="" selected disabled>選択してください</option>
+                    <option value="pop">Pop</option>
                     <option value="hiphop">HipHop</option>
-                    <option value="house">House</option>
-                    <option value="techno">Techno</option>
+                    <option value="j-pop">J-pop</option>
+                    <option value="k-pop">K-pop</option>
+                    <option value="latin">Latin</option>
                     <option value="punk">Punk</option>
                     <option value="rock">Rock</option>
                     <option value="piano">Piano</option>
-                    <option value="j-pop">J-pop</option>
-                    <option value="k-pop">K-pop</option>
-                    <option value="pop">Pop</option>
-                    <option value="latin">Latin</option>
+                    <option value="j-pop">Techno</option>
                 </select>
 
                 <label for="era">年代:</label>
