index.html と app.py を修正

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,11 @@
                 <label for="mood">気分:</label>
                 <select id="mood" name="mood">
                     <option value="" selected disabled>選択してください</option>
-                    <option value="😀">😀 楽しい</option>
-                    <option value="😢">😢 悲しい</option>
-                    <option value="😎">😎 クール</option>
-                    <option value="😡">😡 激おこ</option>
-                    <option value="😍">😍 ラブ</option>
+                    <option value="楽しい">😀 楽しい</option>
+                    <option value="悲しい">😢 悲しい</option>
+                    <option value="クール">😎 クール</option>
+                    <option value="怒り">😡 激おこ</option>
+                    <option value="ラブ">😍 ラブ</option>
                 </select>
 
                 <label for="genre">ジャンル:</label>
@@ -33,13 +33,13 @@
                     <option value="" selected disabled>選択してください</option>
                     <option value="pop">Pop</option>
                     <option value="hiphop">HipHop</option>
-                    <option value="j-pop">J-pop</option>
-                    <option value="k-pop">K-pop</option>
                     <option value="latin">Latin</option>
                     <option value="punk">Punk</option>
                     <option value="rock">Rock</option>
                     <option value="piano">Piano</option>
-                    <option value="j-pop">Techno</option>
+                    <option value="jazz">Jazz</option>
+                    <option value="blues">Blues</option>
+                    <option value="raggae">Raggae</option>
                 </select>
 
                 <label for="era">年代:</label>
@@ -51,8 +51,6 @@
                     <option value="1990年代">1990年代</option>
                     <option value="1980年代">1980年代</option>
                     <option value="1970年代">1970年代</option>
-                    <option value="1960年代">1960年代</option>
-                    <option value="1950年代">1950年代</option>
                 </select>
                 <br>
                 <button type="submit">おすすめを取得</button>
