--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,9 @@
 
                 <!-- ハンバーガーメニュー -->
                 <div class="menu-toggle" id="mobile-menu">
-                    <span class="bar">ホーム</span>
-                    <span class="bar">履歴</span>
-                    <span class="bar">サインアウト</span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
                 </div>
 
                 <!-- メニュー -->
